fixed some layout issues and moved the sidebar.

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -55,9 +55,6 @@ header.navbar .nav-item
 .entrepreneurialdesign .sidebar-heading.open
   display: none
 
-.year5 .sidebar-heading.open
-  display: none
-
 body
   background: #f9f9fb
   background: #fff
@@ -71,8 +68,3 @@ a
 a.header-anchor {
     display: none
 }
-
-.year5 .sidebar
-  border: none
-  font-family: avenir next, avenir, sans-serif
-  font-size: 0.95rem
